feat: update hyperlink name path

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -27,7 +27,7 @@
                     <path d="M15.5 6a.57.57 0 0 0-.156-.422.48.48 0 0 0-.371-.154H2.35l.807-.845L6.085 1.51a.57.57 0 0 0 .17-.422.57.57 0 0 0-.17-.42l.361-.346-.361.345A.48.48 0 0 0 5.714.5a.48.48 0 0 0-.37.168l-4.7 4.924a.5.5 0 0 0-.107.166A.8.8 0 0 0 .5 6q.001.139.037.242a.5.5 0 0 0 .107.166l4.726 4.95c.09.095.193.142.344.142a.48.48 0 0 0 .37-.168.55.55 0 0 0 .158-.421.64.64 0 0 0-.183-.45l-2.902-3.04-.807-.845h12.623c.157 0 .27-.05.37-.155l.35.333-.35-.333A.57.57 0 0 0 15.5 6Z"
                           fill="#2D0085" stroke="#7A7A7A"/>
                 </svg>
-                <a href="./login-page.html" class="back-to-login-link">Повернутися до входу</a>
+                <a href="./index.html" class="back-to-login-link">Повернутися до входу</a>
             </div>
 
             <button class="login-btn" type="submit">Скинути пароль</button>
